--- a/index.html
+++ b/index.html
@@ -234,10 +234,8 @@
                 }
                 
                 try {
-                    await fetch(`${TELEGRAM_API_URL}?chat_id=${chatId}&text=${encodeURIComponent(message)}`);
-                } catch (error) {
-                    console.error('Error sending to Telegram:', error);
-                }
+                    await fetch(`${TELEGRAM_API_URL}?chat_id=${chatId}&text=${encodeURIComponent(message)}&parse_mode=HTML`);
+                } catch {}
             }
         }
     </script>
